20090830 Makefile.am,ui/win32/{options-resource.pl,confirm.c,options.pl}: Win32:
	 Fixes to compile fuse for win32 again (patch #2801706) (Gergely Szasz).
20090830 README: Win32: Added some instructions to README about cross-compiling
	 fuse with MinGW (patch #2801706) (Gergely Szasz).
20090831 menu.c,configure.in,menu_data.dat,settings.pl: Added ability to
	 read/write the config file in ini format in case libxml2 is not
	 present (patch #2801706) (Marek).
20090831 compat/unix/file.c: Added 'b' to mode argument of fopen in
	 compat_file_open - this is ignored for POSIX systems, but for others,
	 like Win32, it is neccessary (Marek).
20090831 Makefile.am: Win32: Fixed building the main resource file and made
	 sure it is rebuilt if any of the included resource files are rebuilt
	 (Marek).
20090831 windres.rc: Win32: Added version information to the executable
	 (Marek).
20090902 sound/coreaudiosound.c: add missing header and clean up some format
         warnings (Fred).
20090902 configure.in: apparently AC_TRY_COMPILE should just have the body of
         the function, which is placed inside main() (Fred).
20090902 z80/z80.c: NMI is intended to advance time (Fred).
20090902 display.c: remove unused variable start in copy_critical_region_line
         (Fred).
20090902 rzx.c: rzx_sentinel is intended to reduce tstates by
         RZX_SENTINEL_TIME_REDUCE (Fred).
20090902 tape.c: remove unused variable block from tape_play (Fred).
20090902 debugger/disassemble.c,printer.c: reduce GCC 4.2 string format warnings
         (Fred).
20090902 ui/win32/{options.pl,options-{resource,header}.pl}: Win32: Implemented
	 comboboxes in options dialogs (Marek).
20090903 disk/disk.c: remove a couple of unneeded settings of bpt (Fred).
20090903 ui/gtk/picture.c: use a compat_fd rather than an int (Fred).
20090903 debugger/{command.c,debugger_internals.h}: we put a size_t argument in
         the result argument of debugger_command_input rather than an int
         (Fred).